# heliograph

./: .env.example  .gitignore  CLAUDE.md  Document Registry Workstream Plan.md  Eng-Infra Readiness.md  HelioGraph DocuBrowser PRD.md  IMPLEMENTATION_PLAN.md  README.md  Technical Architecture Narrative - HelioGraph.md  docker-compose.dev.yml  docker-compose.local-storage.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: LOCAL_DEVELOPMENT.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  CorpusPage.tsx  DocumentPage.tsx  GraphPage.tsx  LoginPage.tsx  SearchPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: chatStore.ts
frontend/src/types/: index.ts
infrastructure/docker/: prometheus.yml
scripts/: localstack-init.sh  run_test.sh  setup-local.sh  test_langchain_extractor.py
services/api_gateway/: Dockerfile  pyproject.toml
services/api_gateway/app/: __init__.py  config.py  main.py
services/api_gateway/app/api/: __init__.py  auth.py  files.py  health.py  preferences.py  proxy.py  realtime.py  upload.py
services/api_gateway/app/api/schemas/: __init__.py  preferences.py
services/api_gateway/app/auth/: __init__.py  jwt.py  models.py  password.py  service.py
services/api_gateway/app/middleware/: __init__.py  auth.py  correlation.py  rate_limit.py  session.py
services/api_gateway/app/realtime/: __init__.py  pubsub.py  sse.py  websocket.py
services/api_gateway/app/routing/: __init__.py  circuit_breaker.py  proxy.py
services/api_gateway/app/upload/: __init__.py  schemas.py  service.py
services/api_gateway/migrations/: 001_create_users.sql  002_create_api_keys.sql  003_create_uploads.sql  004_create_refresh_tokens.sql  005_add_storage_config.sql
services/api_gateway/tests/: __init__.py  conftest.py  test_auth_service.py  test_circuit_breaker.py  test_jwt.py  test_password.py  test_preferences.py
services/document_processing/: Dockerfile
services/document_processing/app/: config.py  main.py
services/document_processing/app/api/: __init__.py  deps.py
services/document_processing/app/core/: __init__.py  models.py  schemas.py
services/document_processing/app/embeddings/: __init__.py  generator.py  qdrant.py
services/document_processing/app/parsers/: __init__.py  chunker.py  docling_parser.py  factory.py  grobid.py  segmenter.py
services/document_processing/app/pipeline/: __init__.py  orchestrator.py  worker.py
services/document_processing/migrations/: 001_create_chunks_table.sql  002_create_entities_table.sql  003_create_processing_jobs_table.sql
services/document_processing/tests/: __init__.py  conftest.py  test_api.py  test_chunker.py  test_docling_parser.py  test_embeddings.py  test_orchestrator.py  test_pipeline_integration.py  test_segmenter.py  test_worker.py
services/document_registry/: Dockerfile  pyproject.toml
services/document_registry/app/: __init__.py  config.py  dependencies.py  main.py
services/document_registry/app/api/: __init__.py  routes.py  schemas.py
services/document_registry/app/core/: __init__.py  dedup.py  normalizers.py  state_machine.py
services/document_registry/app/db/: __init__.py  models.py  repository.py
services/document_registry/app/events/: __init__.py  publisher.py
services/document_registry/app/middleware/: __init__.py  idempotency.py  logging.py  rate_limit.py
services/document_registry/migrations/: 001_create_registry_documents.sql  002_create_document_provenance.sql  003_create_state_audit_log.sql  004_add_deleted_at.sql
services/document_registry/tests/: __init__.py  conftest.py  test_api_routes.py  test_dedup.py  test_event_publisher.py  test_integration.py  test_normalizers.py  test_repository.py  test_schemas.py  test_state_machine.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/app/: __init__.py  config.py  main.py
services/ingestion/app/api/: __init__.py  deps.py
services/ingestion/app/api/routes/: health.py  import_routes.py  jobs.py  search.py  upload.py
services/ingestion/app/connectors/: __init__.py  arxiv.py  base.py  crossref.py  scixplorer.py  semantic_scholar.py
services/ingestion/app/core/: __init__.py  models.py  schemas.py
services/ingestion/app/services/: __init__.py  import_manager.py  job_manager.py  search.py
services/ingestion/app/upload/: __init__.py  handler.py  processor.py
services/ingestion/migrations/: 001_create_ingestion_jobs.sql  002_create_import_records.sql
services/ingestion/tests/: conftest.py  test_api.py  test_connectors.py  test_import_manager.py  test_ingestion_api.py  test_jobs.py  test_pdf_processor.py  test_search.py  test_upload.py
services/knowledge_extraction/: Dockerfile
services/knowledge_extraction/app/: __init__.py  config.py  main.py
services/knowledge_extraction/migrations/: 001_create_entities_table.sql  002_create_relationships_table.sql  003_create_extraction_jobs_table.sql
services/knowledge_extraction/tests/: __init__.py
services/llm_generation/: Dockerfile
services/llm_generation/app/: __init__.py  config.py  main.py
services/llm_generation/tests/: __init__.py
services/query_orchestrator/: Dockerfile
services/query_orchestrator/app/: __init__.py  config.py  main.py
services/query_orchestrator/tests/: __init__.py
shared/: __init__.py
shared/schemas/: __init__.py  api_responses.py  author.py  document.py  events.py
shared/tests/: test_db.py  test_s3.py  test_sparse_encoder.py  test_sqs.py
shared/utils/: __init__.py  db.py  logging.py  metrics.py  s3.py  sparse_encoder.py  sqs.py
(+37 files in other folders)
