[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heliograph"
version = "0.1.0"
description = "HelioGraph RAG - Research Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "HelioGraph Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "rapidfuzz>=3.6.0",
    "aiobotocore>=2.9.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "email-validator>=2.0.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.26.7",
    "sentence-transformers>=5.2.0",
    "qdrant-client>=1.16.2",
    "tiktoken>=0.12.0",
    "neo4j>=6.0.3",
    "litellm>=1.80.10",
    "docling>=2.65.0",
]

[project.optional-dependencies]
ingestion = [
    "feedparser>=6.0.0",
    "PyMuPDF>=1.23.0",
    "aiofiles>=23.2.0",
]

processing = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "tiktoken>=0.5.0",
    "PyMuPDF>=1.23.0",
    "openai>=1.0.0",
    "docling>=2.60.0",  # IBM Research document converter - supports PDF, DOCX, PPTX, XLSX, HTML, images with OCR
]

# LiteLLM for unified LLM provider access
# Supports 100+ providers with single API: OpenAI, Anthropic, Azure, Bedrock, etc.
llm = [
    "litellm>=1.30.0",
]

# LangChain-based knowledge graph extraction
# Inspired by: https://github.com/calexyoung/knowledge-graph-llms
langchain = [
    "langchain>=0.1.0",
    "langchain-experimental>=0.0.47",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "testcontainers>=3.7.0",
    "aiosqlite>=0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = [
    "services/api_gateway/tests",
    "services/document_processing/tests",
    "services/document_registry/tests",
    "services/ingestion/tests",
    "services/knowledge_extraction/tests",
    "services/query_orchestrator/tests",
    "services/llm_generation/tests",
    "shared/tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:litellm.*",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
