[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-registry"
version = "0.1.0"
description = "Document Registry Service for HelioGraph RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "python-rapidfuzz>=3.6.0",
    "aiobotocore>=2.9.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
